又完善了一点数据生成器