@@ -3,16 +3,15 @@ package com.hungteen.pvz.common.register;
 import com.hungteen.pvz.PVZMod;
 import com.hungteen.pvz.common.block.PVZStandingSignBlock;
 import com.hungteen.pvz.common.block.PVZWallSignBlock;
+import com.hungteen.pvz.generator.loot.BlockLootGen;
 import com.hungteen.pvz.world.NutTreeGrower;
 import com.mojang.datafixers.util.Pair;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.tags.BlockTags;
 import net.minecraft.tags.TagKey;
-import net.minecraft.world.item.BlockItem;
-import net.minecraft.world.item.CreativeModeTab;
-import net.minecraft.world.item.Item;
-import net.minecraft.world.item.SignItem;
+import net.minecraft.world.item.*;
 import net.minecraft.world.level.block.*;
+import net.minecraft.world.level.block.grower.AbstractTreeGrower;
 import net.minecraft.world.level.block.state.BlockBehaviour;
 import net.minecraft.world.level.block.state.properties.WoodType;
 import net.minecraft.world.level.material.Material;
@@ -21,10 +20,7 @@ import net.minecraftforge.registries.DeferredRegister;
 import net.minecraftforge.registries.ForgeRegistries;
 import net.minecraftforge.registries.RegistryObject;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.function.Supplier;
 
 import static com.hungteen.pvz.common.register.PVZItemTabs.PVZ_BLOCKS;
@@ -34,11 +30,11 @@ public class PVZBlocks {
 
     //init
     public static final DeferredRegister<Block> BLOCKS = DeferredRegister.create(ForgeRegistries.BLOCKS, PVZMod.MODID);
-    public static List<RegistryObject<Block>> blockList = new ArrayList<>();
     private static CreativeModeTab storedTab = PVZ_BLOCKS;
     private static Supplier<Block> storedSup = () -> new Block(BlockBehaviour.Properties.of(Material.STONE));
     private static final PVZBlocks reflector = new PVZBlocks();
     public static List<WoodType> woodTypeList = new ArrayList<>();
+    public static List<Map<WoodSet, RegistryObject<Block>>> woodList = new ArrayList<>();
     //model
     private static Model storedModel = Model.Simple;
     private static List<ResourceLocation> storedModelTexture = List.of();
@@ -54,11 +50,22 @@ public class PVZBlocks {
     //blockEntity
     private static String storedBlockEntity = null;
     public static Map<String, List<RegistryObject<Block>>> blockEntityMap = new HashMap<>();
+    //flammable
+    private static Pair<Integer, Integer> storedFlammable = new Pair<>(0, 0);
+    public static Map<RegistryObject<Block>, Pair<Integer, Integer>> flammableMap = new HashMap<>();
+    //loot
+    private static Boolean storedLoot = true;
+    public static List<RegistryObject<Block>> lootedList = new ArrayList<>();
+
+
 
 
     //registry
-    public static final RegistryObject<Block> NUT_LEAVES_WITH_NUTS = tag(BlockTags.LEAVES).renderType("cutout").block("nut_leaves_with_nuts", () -> new LeavesBlock(BlockBehaviour.Properties.copy(Blocks.OAK_LEAVES)));
-    public static final Map<WoodSet, RegistryObject<Block>> NUT = wood("nut");
+    /**Loot data has no auto generator: {@link BlockLootGen #addTables()}*/
+    public static final RegistryObject<Block> NUT_LEAVES_WITH_NUTS = tag(BlockTags.LEAVES).renderType("cutout").flammable(30, 60).loot(false).block("nut_leaves_with_nuts", () -> new LeavesBlock(BlockBehaviour.Properties.copy(Blocks.OAK_LEAVES)));
+    public static final Map<WoodSet, RegistryObject<Block>> NUT = wood("nut", new NutTreeGrower());
+
+
 
 
     //definitions
@@ -67,74 +74,96 @@ public class PVZBlocks {
     }
 
     private static RegistryObject<Block> block(String name, Supplier<Block> sup){
-        RegistryObject<Block> BlockObj = BLOCKS.register(name, sup);
-        blockList.add(BlockObj);
+        RegistryObject<Block> blockObj = BLOCKS.register(name, sup);
         //model
         if (hasItem){
             CreativeModeTab tmpTab = storedTab;
             PVZItems.modelList.add(Pair.of(
-                    PVZItems.ITEMS.register(name, () -> new BlockItem(BlockObj.get(), storedTab == null ? new Item.Properties() : new Item.Properties().tab(tmpTab))),
+                    PVZItems.ITEMS.register(name, () -> new BlockItem(blockObj.get(), storedTab == null ? new Item.Properties() : new Item.Properties().tab(tmpTab))),
                     storedItemModel));
         }
         if (storedModel != Model.Modeled){
-            modelList.add(Pair.of(BlockObj, Pair.of(storedModel, storedModelTexture)));
+            modelList.add(Pair.of(blockObj, Pair.of(storedModel, storedModelTexture)));
         }
         hasItem = true;
         storedModel = Model.Simple;
         storedModelTexture = List.of();
         storedItemModel = Pair.of(PVZItems.Model.Block, new ArrayList<>());
         //tag
-        tagMap.put(BlockObj, storedTag);
-        storedTag = List.of();
+        tagMap.put(blockObj, storedTag);
+        storedTag = new ArrayList<>();
         //renderType
         if (storedRenderType != null){
-            renderTypeMap.put(BlockObj, storedRenderType);
+            renderTypeMap.put(blockObj, storedRenderType);
             storedRenderType = null;
         }
         //blockEntity
         if (storedBlockEntity != null){
             if (! blockEntityMap.containsKey(storedBlockEntity)){
-                blockEntityMap.put(storedBlockEntity, List.of(BlockObj));
+                blockEntityMap.put(storedBlockEntity, List.of(blockObj));
             } else {
                 List<RegistryObject<Block>> list = new ArrayList<>(List.copyOf(blockEntityMap.get(storedBlockEntity)));
-                list.add(BlockObj);
+                list.add(blockObj);
                 blockEntityMap.put(storedBlockEntity, list);
             }
             storedBlockEntity = null;
         }
+        //flammable
+        if (!storedFlammable.equals(Pair.of(0, 0))){
+            flammableMap.put(blockObj, storedFlammable);
+            storedFlammable = Pair.of(0, 0);
+        }
+        //loot
+        if (!storedLoot){
+            storedLoot = true;
+            lootedList.add(blockObj);
+        }
         //return
-        return BlockObj;
+        return blockObj;
     }
 
-    private static Map<WoodSet, RegistryObject<Block>> wood(String name){
+    private static Map<WoodSet, RegistryObject<Block>> wood(String name, AbstractTreeGrower treeGrower, TagKey<Block>... tags){
+        /**Boats need to be registered separately in {@link PVZItems}*/
         //init
-        Map<WoodSet, RegistryObject<Block>> set = new HashMap();
+        Map<WoodSet, RegistryObject<Block>> set = new HashMap<>();
         WoodType woodtype = WoodType.create(name);
         WoodType.register(woodtype);
         woodTypeList.add(woodtype);
         CreativeModeTab tmpTab = storedTab;
+        short flame = 1;
+        if (Arrays.stream(tags).toList().contains(BlockTags.NON_FLAMMABLE_WOOD)){
+            flame = 0;
+        }
         //register
-        set.put(WoodSet.Plank, tag(BlockTags.PLANKS).block(name+"_planks"));
-        set.put(WoodSet.Sampling, tag(BlockTags.SAPLINGS).model(Model.Cross).renderType("cutout").itemModel(PVZItems.Model.Simple, res("nut_sapling")).block(name+"_sapling", () -> new SaplingBlock(new NutTreeGrower(), BlockBehaviour.Properties.copy(OAK_SAPLING))));
-        set.put(WoodSet.Leaves, tag(BlockTags.LEAVES).renderType("cutout").block(name+"_leaves", () -> new LeavesBlock(BlockBehaviour.Properties.copy(Blocks.OAK_LEAVES))));
-        set.put(WoodSet.Wood, tag(BlockTags.LOGS).model(Model.Column, res("nut_log"), res("nut_log")).block(name+"_wood", () -> new RotatedPillarBlock(BlockBehaviour.Properties.copy(Blocks.OAK_WOOD))));
-        set.put(WoodSet.StWood, tag(BlockTags.LOGS).model(Model.Column, res("stripped_nut_log"), res("stripped_nut_log")).block("stripped_"+name+"_wood", () -> new RotatedPillarBlock(BlockBehaviour.Properties.copy(Blocks.STRIPPED_OAK_WOOD))));
-        set.put(WoodSet.Log, tag(BlockTags.LOGS).model(Model.Column).block(name+"_log", () -> new RotatedPillarBlock(BlockBehaviour.Properties.copy(Blocks.OAK_LOG))));
-        set.put(WoodSet.StLog, tag(BlockTags.LOGS).model(Model.Column, res("stripped_nut_log"), res("nut_log_top")).block("stripped_"+name+"_log", () -> new RotatedPillarBlock(BlockBehaviour.Properties.copy(Blocks.STRIPPED_OAK_LOG))));
-        set.put(WoodSet.Slab, tag(BlockTags.WOODEN_SLABS).model(Model.Slab, res("nut_planks")).block(name+"_slab", () -> new SlabBlock(BlockBehaviour.Properties.copy(OAK_SLAB))));
-        set.put(WoodSet.Stairs, tag(BlockTags.WOODEN_STAIRS).model(Model.Stairs, res("nut_planks")).block(name+"_stairs", () -> new StairBlock(() -> set.get(WoodSet.Plank).get().defaultBlockState(), BlockBehaviour.Properties.copy(OAK_STAIRS))));
-        set.put(WoodSet.Door, tag(BlockTags.WOODEN_DOORS).model(Model.Door).itemModel(PVZItems.Model.Simple).block(name+"_door", () -> new DoorBlock(BlockBehaviour.Properties.copy(OAK_DOOR))));
-        set.put(WoodSet.Trapdoor, tag(BlockTags.WOODEN_TRAPDOORS).model(Model.Trapdoor).itemModel(PVZItems.Model.Block, res("nut_trapdoor_bottom")).block(name+"_trapdoor", () -> new TrapDoorBlock(BlockBehaviour.Properties.copy(OAK_TRAPDOOR))));
-        set.put(WoodSet.Fence, tag(BlockTags.WOODEN_FENCES).model(Model.Fence, res("nut_planks")).itemModel(PVZItems.Model.Block, res("nut_fence_inventory")).block(name+"_fence", () -> new FenceBlock(BlockBehaviour.Properties.copy(OAK_FENCE))));
-        set.put(WoodSet.Gate, tag(BlockTags.FENCE_GATES).model(Model.Gate, res("nut_planks")).block(name+"_fence_gate", () -> new FenceGateBlock(BlockBehaviour.Properties.copy(OAK_FENCE_GATE))));
-        set.put(WoodSet.Button, tag(BlockTags.WOODEN_BUTTONS).model(Model.Button, res("nut_planks")).itemModel(PVZItems.Model.Block, res("nut_button_inventory")).block(name+"_button", () -> new WoodButtonBlock(BlockBehaviour.Properties.copy(OAK_BUTTON))));
-        set.put(WoodSet.Plate, tag(BlockTags.WOODEN_PRESSURE_PLATES).model(Model.Plate, res("nut_planks")).block(name+"_pressure_plate", () -> new PressurePlateBlock(PressurePlateBlock.Sensitivity.EVERYTHING, BlockBehaviour.Properties.copy(OAK_PRESSURE_PLATE))));
-        set.put(WoodSet.Sign, noItem().tag(BlockTags.STANDING_SIGNS).model(Model.Sign).blockEntity("pvz_sign").block(name+"_sign", () -> new PVZStandingSignBlock(BlockBehaviour.Properties.copy(OAK_SIGN), woodtype)));
-        set.put(WoodSet.WallSign, noItem().tag(BlockTags.WALL_SIGNS).model(Model.WallSign, res("nut_planks")).blockEntity("pvz_sign").block(name+"_wall_sign", () -> new PVZWallSignBlock(BlockBehaviour.Properties.copy(OAK_WALL_SIGN), woodtype)));
+        set.put(WoodSet.Plank, tag(BlockTags.PLANKS).tag(tags).flammable(flame*5, flame*20).block(name+"_planks"));
+        set.put(WoodSet.Sampling, tag(BlockTags.SAPLINGS).tag(tags).model(Model.Cross).renderType("cutout").itemModel(PVZItems.Model.Simple, res(name+"_sapling")).block(name+"_sapling", () -> new SaplingBlock(treeGrower, BlockBehaviour.Properties.copy(OAK_SAPLING))));
+        set.put(WoodSet.Leaves, tag(BlockTags.LEAVES).tag(tags).renderType("cutout").flammable(flame*5, flame*60).loot(false).block(name+"_leaves", () -> new LeavesBlock(BlockBehaviour.Properties.copy(Blocks.OAK_LEAVES))));
+        if (flame == 1) {
+            set.put(WoodSet.Wood, tag(BlockTags.LOGS, BlockTags.LOGS_THAT_BURN).tag(tags).model(Model.Column, res(name + "_log"), res(name + "_log")).flammable(5, 5).block(name + "_wood", () -> new RotatedPillarBlock(BlockBehaviour.Properties.copy(Blocks.OAK_WOOD))));
+            set.put(WoodSet.StWood, tag(BlockTags.LOGS, BlockTags.LOGS_THAT_BURN).tag(tags).model(Model.Column, res("stripped_" + name + "_log"), res("stripped_" + name + "_log")).flammable(5, 5).block("stripped_" + name + "_wood", () -> new RotatedPillarBlock(BlockBehaviour.Properties.copy(Blocks.STRIPPED_OAK_WOOD))));
+            set.put(WoodSet.Log, tag(BlockTags.LOGS, BlockTags.LOGS_THAT_BURN).tag(tags).model(Model.Column).flammable(5, 5).block(name + "_log", () -> new RotatedPillarBlock(BlockBehaviour.Properties.copy(Blocks.OAK_LOG))));
+            set.put(WoodSet.StLog, tag(BlockTags.LOGS, BlockTags.LOGS_THAT_BURN).tag(tags).model(Model.Column, res("stripped_" + name + "_log"), res(name + "_log_top")).flammable(5, 5).block("stripped_" + name + "_log", () -> new RotatedPillarBlock(BlockBehaviour.Properties.copy(Blocks.STRIPPED_OAK_LOG))));
+        } else {
+            set.put(WoodSet.Wood, tag(BlockTags.LOGS).tag(tags).model(Model.Column, res(name + "_log"), res(name + "_log")).block(name + "_wood", () -> new RotatedPillarBlock(BlockBehaviour.Properties.copy(Blocks.OAK_WOOD))));
+            set.put(WoodSet.StWood, tag(BlockTags.LOGS).tag(tags).model(Model.Column, res("stripped_" + name + "_log"), res("stripped_" + name + "_log")).block("stripped_" + name + "_wood", () -> new RotatedPillarBlock(BlockBehaviour.Properties.copy(Blocks.STRIPPED_OAK_WOOD))));
+            set.put(WoodSet.Log, tag(BlockTags.LOGS).tag(tags).model(Model.Column).block(name + "_log", () -> new RotatedPillarBlock(BlockBehaviour.Properties.copy(Blocks.OAK_LOG))));
+            set.put(WoodSet.StLog, tag(BlockTags.LOGS).tag(tags).model(Model.Column, res("stripped_" + name + "_log"), res(name + "_log_top")).block("stripped_" + name + "_log", () -> new RotatedPillarBlock(BlockBehaviour.Properties.copy(Blocks.STRIPPED_OAK_LOG))));
+        }
+        set.put(WoodSet.Slab, tag(BlockTags.WOODEN_SLABS).tag(tags).model(Model.Slab, res(name+"_planks")).flammable(flame*5, flame*5).block(name+"_slab", () -> new SlabBlock(BlockBehaviour.Properties.copy(OAK_SLAB))));
+        set.put(WoodSet.Stairs, tag(BlockTags.WOODEN_STAIRS).tag(tags).model(Model.Stairs, res(name+"_planks")).flammable(flame*5, flame*20).block(name+"_stairs", () -> new StairBlock(() -> set.get(WoodSet.Plank).get().defaultBlockState(), BlockBehaviour.Properties.copy(OAK_STAIRS))));
+        set.put(WoodSet.Door, tag(BlockTags.WOODEN_DOORS).tag(tags).model(Model.Door).itemModel(PVZItems.Model.Simple).block(name+"_door", () -> new DoorBlock(BlockBehaviour.Properties.copy(OAK_DOOR))));
+        set.put(WoodSet.Trapdoor, tag(BlockTags.WOODEN_TRAPDOORS).tag(tags).model(Model.Trapdoor).itemModel(PVZItems.Model.Block, res(name+"_trapdoor_bottom")).block(name+"_trapdoor", () -> new TrapDoorBlock(BlockBehaviour.Properties.copy(OAK_TRAPDOOR))));
+        set.put(WoodSet.Fence, tag(BlockTags.WOODEN_FENCES).tag(tags).model(Model.Fence, res(name+"_planks")).itemModel(PVZItems.Model.Block, res(name+"_fence_inventory")).flammable(flame*5, flame*20).block(name+"_fence", () -> new FenceBlock(BlockBehaviour.Properties.copy(OAK_FENCE))));
+        set.put(WoodSet.Gate, tag(BlockTags.FENCE_GATES).tag(tags).model(Model.Gate, res(name+"_planks")).flammable(flame*5, flame*20).block(name+"_fence_gate", () -> new FenceGateBlock(BlockBehaviour.Properties.copy(OAK_FENCE_GATE))));
+        set.put(WoodSet.Button, tag(BlockTags.WOODEN_BUTTONS).tag(tags).model(Model.Button, res(name+"_planks")).itemModel(PVZItems.Model.Block, res(name+"_button_inventory")).block(name+"_button", () -> new WoodButtonBlock(BlockBehaviour.Properties.copy(OAK_BUTTON))));
+        set.put(WoodSet.Plate, tag(BlockTags.WOODEN_PRESSURE_PLATES).tag(tags).model(Model.Plate, res(name+"_planks")).block(name+"_pressure_plate", () -> new PressurePlateBlock(PressurePlateBlock.Sensitivity.EVERYTHING, BlockBehaviour.Properties.copy(OAK_PRESSURE_PLATE))));
+        set.put(WoodSet.Sign, noItem().tag(BlockTags.STANDING_SIGNS).tag(tags).model(Model.Sign).blockEntity("pvz_sign").block(name+"_sign", () -> new PVZStandingSignBlock(BlockBehaviour.Properties.copy(OAK_SIGN), woodtype)));
+        set.put(WoodSet.WallSign, noItem().tag(BlockTags.WALL_SIGNS).tag(tags).model(Model.WallSign, res(name+"_planks")).blockEntity("pvz_sign").block(name+"_wall_sign", () -> new PVZWallSignBlock(BlockBehaviour.Properties.copy(OAK_WALL_SIGN), woodtype)));
         tab(tmpTab);
         PVZItems.modelList.add(Pair.of(
                 PVZItems.ITEMS.register(name+"_sign", () -> new SignItem(storedTab == null ? new Item.Properties() : new Item.Properties().tab(tmpTab), set.get(WoodSet.Sign).get(), set.get(WoodSet.WallSign).get())),
                 Pair.of(PVZItems.Model.Simple, List.of())));
+        woodList.add(set);
         return set;
     }
 
@@ -168,10 +197,10 @@ public class PVZBlocks {
         return reflector;
     }
     private static PVZBlocks tag(TagKey<Block>... tags){
-        return tag(List.of(tags));
+        return tag(Arrays.asList(tags));
     }
     private static PVZBlocks tag(List<TagKey<Block>> list){
-        storedTag = list;
+        storedTag.addAll(list);
         return reflector;
     }
     private static ResourceLocation res(String path){
@@ -196,6 +225,14 @@ public class PVZBlocks {
         storedBlockEntity = blockentity;
         return reflector;
     }
+    private static PVZBlocks flammable(Integer ignite, Integer burn){
+        storedFlammable = Pair.of(ignite, burn);
+        return reflector;
+    }
+    private static PVZBlocks loot(Boolean loot){
+        storedLoot = loot;
+        return reflector;
+    }
 
     public enum WoodSet {
         Plank, Slab, Stairs,
@@ -213,5 +250,4 @@ public class PVZBlocks {
         Fence, Gate,
         Modeled
     }
-
 }
